# tjd

./: .gitignore  Cargo.toml
.nova/: Configuration.json
tjd/: Cargo.toml
tjd_api/: Cargo.toml
tjd_api_response/: Cargo.toml
tjd_api_response/src/: lib.rs
tjd_builder/: Cargo.toml
tjd_builder/src/: lib.rs
tjd_builder/tjd_builder_derive/: Cargo.toml
tjd_builder/tjd_builder_derive/src/: lib.rs
tjd_the_drawer/: Cargo.toml
tjd_the_drawer/src/: lib.rs  tjd_type_enum.rs  tjd_type_enum_macro.rs
tjd_the_junk/: Cargo.toml
tjd_the_junk/src/: crud.rs  lib.rs  seed-new.txt  seed.txt  soil-new.txt  soil.txt  sunlight-new.txt  sunlight.txt  tjd_type_enum.rs
types/src/: actual_trash.rs  lib.rs
