[package]
name = "tjd_the_drawer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tjd_api = { path = "../tjd_api"}
strum = "0.24"
strum_macros = "0.24"
# tjd_builder_derive = { path = "../tjd_builder/tjd_builder_derive"}